...
                    shape = RoundedCornerShape(5.dp)
                )
                .background(MaterialTheme.colorScheme.surface)
                .padding(spacing.spaceMedium)
                .padding(end = 24.dp)
                .onFocusChanged(onFocusChanged)
                .testTag("search_text_field")
        )
        if (shouldShowHint) {
            Text(
                text = hint,
                style = MaterialTheme.typography.bodyMedium,
                fontWeight = FontWeight.Light,
...
