...
                                width = 1.dp,
                                color = Color.Gray
                            )
                            .alignBy(LastBaseline)
                            .padding(spacing.spaceSmall)
                            .semantics {
                                contentDescription = "Amount"
                            }
                    )
                    Spacer(modifier = Modifier.width(spacing.spaceExtraSmall))
                    Text(
                        text = stringResource(id = R.string.grams),
                        modifier = Modifier.alignBy(LastBaseline)
...
